# sneksynth

./: .gitignore  README.md  pyproject.toml
src/sneksynth/: __main__.py  demo.py  envelope.py  io.py  next.py  oscilators.py  sequencer.py  tones.py
